fixing issues on mobile

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -27,7 +27,10 @@ h2 {
     gap: 15px;
 
 }
+.field{
+    background: white;
 
+}
 .quote-form label {
     font-weight: bold;
     color:#333333;
@@ -35,12 +38,13 @@ h2 {
 
 .quote-form input,
 .quote-form textarea {
+    background: white;
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
-    color:#E3E6D3;
+    color:#333333;
     font-family: sans-serif;
 }
 
